# hsa-snoop

./: .clang-format  .gitignore  .spellcheck.yml  .wordlist.txt  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-check.yml  clang-format.yml  debian-package.yml  debian-publish.yml  spell-check.yml
debian/: conffiles  control  postinst  prerm
examples/: CMakeLists.txt  README.md  ais-test.hip  gfx-test.hip  sdma-test.hip  sdma_stress.hip  vecwork.hip
grafana/: hsa-snoop-dashboard.json
scripts/: hsa-snoop.bt
src/: ais_monitor.cpp  ais_monitor.h  aql.cpp  aql.h  discovery.cpp  discovery.h  ksym.cpp  ksym.h  main.cpp  model.h  parser.cpp  parser.h  proc_mem.cpp  proc_mem.h  prometheus_exporter.cpp  prometheus_exporter.h  sdma.cpp  sdma.h  trace_writer.cpp  trace_writer.h
systemd/: hsa-snoop-override.conf  hsa-snoop-prometheus.service  hsa-snoop.conf  hsa-snoop.logrotate  hsa-snoop.service
